syntax = "proto3";

package itsreg;

option go_package = "github.com/bmstu-itstech/itsreg-bots/api/grpc/gen";

service BotsService {
  rpc CreateBot(CreateBotRequest) returns (Empty);
  rpc Entry(EntryRequest) returns (Empty);
  rpc Process(ProcessRequest) returns (Empty);

  rpc GetBot(GetBotRequest) returns (Bot);
}



enum Status {
  StatusUnknown = 0;

  Started = 1;
  Stopped = 2;
  Failed  = 3;
}

message CreateBotRequest {
  string botUUID = 1;
  string name    = 2;
  string token   = 3;

  repeated EntryPoint entries = 4;
  repeated Block      blocks  = 5;
}

message EntryRequest {
  string botUUID = 1;
  int64  userID  = 2;
  string key     = 3;
}

message ProcessRequest {
  string botUUID = 1;
  int64  userID  = 2;
  string text    = 3;
}

message GetBotRequest {
  string botUUID = 1;
}


message Empty {}

message EntryPoint {
  string key   = 1;
  int32  state = 2;
}

enum BlockType {
  BlockUnknown   = 0;
  BlockMessage   = 1;
  BlockQuestion  = 2;
  BlockSelection = 3;
}

message Block {
  BlockType type      = 2;
  int32     state     = 1;
  int32     nextState = 3;
  string    title     = 4;
  string    text      = 5;

  repeated Option options = 6;
}

message Bot {
  string botUUID = 1;
  string name    = 2;
  string token   = 3;
  Status status  = 4;

  repeated EntryPoint entries = 5;
  repeated Block      blocks  = 6;
}

message Option {
  string text = 1;
  int32  next = 2;
}

message Button {
  string text = 1;
  int32  next = 2;
}
